Android alpha4: fix first visitor press, add native WebRTC AEC and live images
